fixed functionality
full functionality
need to fix off-center css

--- a/grid.css
+++ b/grid.css
@@ -18,6 +18,7 @@
 
 
 
+
 /* Clearfix */
 
 .row::before,
@@ -43,11 +44,6 @@
 
 
 
-
-
-
-
-
 /* Mobile defaults */
 
 .col-3,
@@ -56,14 +52,6 @@
 .col-8 .col-12 {
     width: 100%;
 }
-
-
-
-
-
-
-
-
 
 
 
@@ -92,6 +80,8 @@
 }
 
 
+/* small screens */
+
 @media only screen and (max-width: 430px) {
     /* 3 columns, 3/12 in % */
     .col-3 {
@@ -115,6 +105,11 @@
     /* 12 columns, 12/12 */
     .col-12 {
         width: 100%;
+    }
+
+    html,
+    body {
+        background: #384d78;
     }
 
     h1 {
@@ -191,8 +186,9 @@
 }
 
 #hospital-icon {
-  height: 110px;
+    height: 110px;
 }
+
 
 
 
